# ai-clinical-guardrails

./: .editorconfig  .gitignore  .pre-commit-config.yaml  ADR-extracts.md  AGENTS.md  CONSOLIDATED_PLAN.md  CONTRIBUTING.md  PLAN.md  RATIONALE.md  README.md  START_HERE.md  THINKING_GAPS.md  alembic.ini  debug_import.py  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 48c0c98075f2_initial_migration.py  5d23fb5bdd00_add_transcription_fields.py  f82689de3fdd_add_phase2b_transcription_extraction_.py
cli/: api.py  extract.py  fhir.py  protocols.py  review.py  test_extraction.py
config/: medical_protocols.yaml
docker/: docker-compose.yml
docker/llm/: Dockerfile  llm_service.py  requirements.txt
docker/whisper/: Dockerfile  requirements.txt  whisper_service.py
docs/: ADDING_A_RULE.md  ALEMBIC_MIGRATIONS.md  ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  BUSINESS_PURPOSE.md  BUSINESS_PURPOSE_RATIONALE.md  BUSINESS_PURPOSE_THINKING.md  COMMON_PATTERNS.md  DEBUGGING_GUIDE.md  DOCS_REVIEW.md  FAQ.md  GLOSSARY.md  INTEGRATION_TESTING.md  OPERATIONS.md  PRE_MORTEM.md  PYTHON_STANDARDS.md  PYTHON_STANDARDS_THINKING.md  QUICKSTART.md  RISK_MITIGATION.md  TESTING_FRAMEWORK.md  TESTING_FRAMEWORK_THINKING.md  TESTING_WORKFLOWS.md  THINKING_STANDARD.md  VALIDATION_AND_GROUNDING.md  WORKFLOW_SPEC.md
docs/architecture_decisions/: 010-modular-fhir-models.md  011-subset-fhir-models.md  012-use-fhir-resources-r5.md  013-use-sqlite-for-local-deployments.md
docs/archive/: CONSOLIDATED_PLAN.md  PLAN.md  README.md
docs/business/: EXECUTIVE_SUMMARY.md  PRODUCT_CASE.md  VOICE_TRANSCRIPTION_OVERVIEW.md  VOICE_TRANSCRIPTION_REQUIREMENTS.md
docs/clinical/: CLINICAL_ROLLOUT_PLAN.md  CLINICAL_STAKEHOLDER_GUIDE.md  CLINICAL_WORKFLOW_INTEGRATION.md
docs/compliance/: COMPLIANCE_CHECKLIST.md  (+1 more)
examples/: README.md  basic_verification.py  batch_processing.py  complete_workflow.py  custom_rule.py
pwa/: README.md
scripts/: backup_db.py  benchmark.py  generate_adr_summary.py  seed_db.py  validate_cassettes.py
src/: api.py  engine.py  instrumentation.py  models.py  telemetry.py
tests/: conftest.py  helpers.py  test_api.py  test_compliance.py  test_extraction_accuracy.py  test_review_models.py  test_telemetry.py
(+167 files in other folders)
