[project]
name = "python-backend"
version = "0.1.0"
description = "AI Clinical Guardrails - High Assurance Verification"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.13.0",
    "datamodel-code-generator>=0.54.0",
    "fastapi>=0.129.0",
    "fhir-resources>=8.0.0",
    "httpx>=0.28.1",
    "hypothesis>=6.151.9",
    "jsonlines>=4.0.0",
    "mypy>=1.11.0",
    "openai>=1.0.0",
    "pre-commit>=3.8.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-recording>=0.13.1",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "ruff>=0.15.2",
    "sqlalchemy>=2.0.46",
    "syrupy>=4.9.1",
    "tenacity>=9.0.0",
    "types-pyyaml>=6.0.0",
    "typer>=0.15.1",
    "uvicorn>=0.41.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["src/integrations/fhir/generated.py", "alembic/versions/*.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = ["UP046"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
exclude = [
    "src/integrations/fhir/generated.py",
    "alembic/versions",
    "pwa/tests/.*",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "component: marks tests as component/integration tests (may require external services)",
]
# Syrupy configuration
addopts = "--snapshot-warn-unused"

[dependency-groups]
dev = [
    "playwright>=1.58.0",
    "pytest-benchmark>=5.2.3",
    "pytest-playwright>=0.7.2",
    "pytest-xdist>=3.8.0",
    "types-pyyaml>=6.0.0",
]
